--- a/AxSlime/AxSlime.csproj
+++ b/AxSlime/AxSlime.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>AXSlime</AssemblyName>
+    <PublishAot>True</PublishAot>
   </PropertyGroup>
 
   <ItemGroup>
