--- a/AxSlime/AxSlime.csproj
+++ b/AxSlime/AxSlime.csproj
@@ -10,10 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpier.MsBuild" Version="0.27.2">
+    <PackageReference Include="CSharpier.MsBuild" Version="0.27.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="LucHeart.CoreOSC" Version="1.2.1" />
   </ItemGroup>
 
 </Project>
