Don't publish AOT by default & give option to
AntiVirus doesn't like me

--- a/AxSlime/AxSlime-AOT.csproj
+++ b/AxSlime/AxSlime-AOT.csproj
@@ -6,9 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>AXSlime</AssemblyName>
-    <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
-    <PublishTrimmed>true</PublishTrimmed>
+    <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <ItemGroup>
